# tpi

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENCE  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: test.yml
tests/: test_terraform.py
tpi/: __init__.py  base.py  bin.py  main.py  terraform.py
tpi/templates/: main.tf
