[metadata]
name=tpi
description=Terraform Provider Iterative
long_description=file: README.rst
long_description_content_type=text/x-rst
license=Apache-2.0
license_file=LICENCE
url=https://github.com/iterative/tpi
project_urls=
    Changelog=https://github.com/iterative/tpi/releases
    Documentation=https://github.com/iterative/tpi/#tpi
author=Casper da Costa-Luis
author_email=casper.dcl@physics.org
maintainer=Iterative
maintainer_email=support@cml.dev
keywords=terraform, cloud, orchestration
platforms=any
provides=tpi
classifiers=
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: MacOS X
    Environment :: Plugins
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Desktop Environment
    Topic :: Education :: Computer Aided Instruction (CAI)
    Topic :: Education :: Testing
    Topic :: Internet
    Topic :: Other/Nonlisted Topic
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Pre-processors
    Topic :: Software Development :: User Interfaces
    Topic :: System
    Topic :: System :: Distributed Computing
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
    Topic :: Utilities
[options]
setup_requires=setuptools>=42; setuptools_scm[toml]>=3.4
install_requires=
    funcy
    jinja2>=2.0.0
    miutil[web]>=0.7.0
    python-terraform>=0.10.1
    setuptools
python_requires= >=3.4
include_package_data=True
packages=find:
[options.extras_require]
ssh=sshfs>=2021.7.1
[options.entry_points]
console_scripts=
    tpi=tpi.main:main
[options.packages.find]
exclude=tests
[options.package_data]
*=*.md, *.rst, *.tf

[flake8]
max_line_length=88
extend-ignore=E203,P1
exclude=build,dist,.eggs,.git,__pycache__

[isort]
profile=black
known_first_party=tpi,tests

[tool:pytest]
timeout=5
addopts=-v --tb=short -rxs -W=error --log-level=debug --durations=0 --cov=tpi --cov-report=term-missing --cov-report=xml
